--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Trabajo practico css 3</title>
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
-	<link href="<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,900" rel="stylesheet">">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,900" rel="stylesheet">
 	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
@@ -99,65 +99,67 @@
 			<p>Lorem ipsum dolor sit amelorem	Lorem ipsum dolor sit amet, consectetur adipisic </p>
 		</article>
 
-		<div class="menuimg">
-			<ul>
+		<article class="contenedor-celu">
+			<div class="menuimg">
+				<ul>
 
-				<li>
-					<h3 class="mayuscula opensans">Retina ready</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img1" src="assets/icons/ser1.png">
-				</li>
+					<li>
+						<h3 class="mayuscula opensans">Retina ready</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img1" src="assets/icons/ser1.png">
+					</li>
 
-				<li>
-					<h3 class="mayuscula opensans">Easy customize</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img2" src="assets/icons/ser2.png">
-				</li>
+					<li>
+						<h3 class="mayuscula opensans">Easy customize</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img2" src="assets/icons/ser2.png">
+					</li>
 
-				<li>
-					<h3 class="mayuscula opensans">Pixel perfect</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img3" src="assets/icons/ser3.png">
-				</li>
-			</ul>
-		</div>
+					<li>
+						<h3 class="mayuscula opensans">Pixel perfect</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img3" src="assets/icons/ser3.png">
+					</li>
+				</ul>
+			</div>
 
-		<img class="imgcelu" src="assets/iphone2.png">
+			<img class="imgcelu" src="assets/iphone2.png">
 
-		<div class="menuimg2">
-			<ul>
+			<div class="menuimg2">
+				<ul>
 
-				<li>
-					<h3 class="mayuscula opensans">Unlimited colors</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img4" src="assets/icons/ser4.png">
-				</li>
+					<li>
+						<h3 class="mayuscula opensans">Unlimited colors</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img4" src="assets/icons/ser4.png">
+					</li>
 
-				<li>
-					<h3 class="mayuscula opensans">Features</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img5" src="assets/icons/ser5.png">
-				</li>
+					<li>
+						<h3 class="mayuscula opensans">Features</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img5" src="assets/icons/ser5.png">
+					</li>
 
-				<li>
-					<h3 class="mayuscula opensans">Support today</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
-					</p>
-					<img class="img6" src="assets/icons/ser6.png">
-				</li>
-			</ul>
-		</div>
+					<li>
+						<h3 class="mayuscula opensans">Support today</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quam molestias eaque
+						</p>
+						<img class="img6" src="assets/icons/ser6.png">
+					</li>
+				</ul>
+			</div>
+		</article>
 
 	</section>
 
