--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
-	<link href="<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,900" rel="stylesheet">">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,900" rel="stylesheet">
 	<title>Trabajo practico css 3</title>
 </head>
 <body>
