--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<title>Trabajo practico css 3</title>
+	<title>Trabajo practico css 4</title>
 	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Raleway:400,900" rel="stylesheet">
@@ -27,7 +27,7 @@
 		</div>
 		<form class="form" method="POST" action="enviar.php"> 
 			<input class="cuadradoheader" type="text" placeholder="Enter your domain name and hit enter">
-			<span class="ion-search">search</span>
+			<span class="boton-search">search</span>
 
 		</form>
 		
@@ -37,7 +37,7 @@
 		<div class="div-logos">
 			<ul>
 				<li class="logos-center">
-					<img src="assets/icons/wid1.png">
+						<img class="icono" src="assets/icons/wid1.png">
 					<h3 class="mayuscula opensans">
 						Speed servers
 					</h3>
@@ -52,7 +52,7 @@
 				</li>
 
 				<li class="logos-center">
-					<img src="assets/icons/wid2.png">
+					<img class="icono" src="assets/icons/wid2.png">
 					<h3 class="mayuscula opensans">
 						Hostro services
 					</h3>
@@ -65,7 +65,7 @@
 					<img class="threedots" src="assets/icons/widdot.png">
 				</li>
 				<li class="logos-center">
-					<img src="assets/icons/wid3.png">
+					<img class="icono" src="assets/icons/wid3.png">
 					<h3 class="mayuscula opensans">
 						Live support
 					</h3>
@@ -78,7 +78,7 @@
 					<img class="threedots" src="assets/icons/widdot.png">
 				</li>
 				<li class="logos-center">
-					<img src="assets/icons/wid4.png">
+					<img class="icono" src="assets/icons/wid4.png">
 					<h3 class="mayuscula opensans">
 						Get domain name
 					</h3>
